<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/dialogCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@id/separatorDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_hint"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="@id/dialogCardView"
        app:layout_constraintStart_toStartOf="@id/dialogCardView"
        app:layout_constraintEnd_toEndOf="@id/dialogCardView"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_layout"
        style="@style/EditTextLayout"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:boxBackgroundColor="@color/colorGrayLight"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        app:layout_constraintStart_toStartOf="@id/dialogCardView"
        app:layout_constraintEnd_toEndOf="@id/dialogCardView"
        app:layout_constraintTop_toBottomOf="@id/hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/name_field"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:elevation="2dp"
            android:paddingStart="10dp"
            android:paddingBottom="16dp"
            android:hint="@string/name_of_product"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/number_layout"
        style="@style/EditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        app:boxBackgroundColor="@color/colorGrayLight"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintStart_toStartOf="@id/dialogCardView"
        app:layout_constraintEnd_toEndOf="@id/dialogCardView"
        app:layout_constraintTop_toBottomOf="@id/name_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/number_field"
            style="@style/TextLabel"
            android:elevation="2dp"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingBottom="16dp"
            android:hint="@string/number_of_product"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/price_layout"
        style="@style/EditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:elevation="2dp"
        app:boxBackgroundColor="@color/colorGrayLight"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="4dp"
        app:boxCornerRadiusBottomStart="4dp"
        app:boxCornerRadiusTopEnd="4dp"
        app:boxCornerRadiusTopStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintStart_toStartOf="@id/dialogCardView"
        app:layout_constraintEnd_toEndOf="@id/dialogCardView"
        app:layout_constraintTop_toBottomOf="@id/number_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/price_field"
            style="@style/TextLabel"
            android:elevation="2dp"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingBottom="16dp"
            android:hint="@string/price_of_product"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/accept_bt"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:text="@string/accept_bt"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorText"
        android:layout_marginBottom="36dp"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@id/price_layout"
        app:layout_constraintStart_toStartOf="@id/dialogCardView"
        app:layout_constraintEnd_toEndOf="@id/dialogCardView"/>

    <View
        android:id="@+id/separatorDialog"
        android:layout_width="wrap_content"
        android:layout_height="12dp"
        app:layout_constraintEnd_toEndOf="@id/dialogCardView"
        app:layout_constraintStart_toStartOf="@id/dialogCardView"
        app:layout_constraintTop_toBottomOf="@id/accept_bt"/>

</android.support.constraint.ConstraintLayout>