<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:layout_marginTop="32dp"
            android:textSize="32dp"
            android:text="@string/dashboard_page_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Spinner
            android:id="@+id/foreignСurrencySpinner"
            android:layout_width="120dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:background="@drawable/spinner_background"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@+id/convertToText"/>

        <TextView
            android:id="@+id/convertToText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/convert_to"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/foreignСurrencySpinner"
            app:layout_constraintEnd_toStartOf="@+id/nativeСurrencySpinner"
            app:layout_constraintTop_toTopOf="@+id/foreignСurrencySpinner"
            app:layout_constraintBottom_toBottomOf="@id/foreignСurrencySpinner"/>

        <Spinner
            android:id="@+id/nativeСurrencySpinner"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/spinner_background"
            app:layout_constraintTop_toTopOf="@+id/foreignСurrencySpinner"
            app:layout_constraintBottom_toBottomOf="@+id/foreignСurrencySpinner"
            app:layout_constraintStart_toEndOf="@id/convertToText"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/courseTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/foreignСurrencySpinner"
            app:layout_constraintBottom_toTopOf="@id/accept_bt"
            tools:text="курс 1.003"
            tools:visibility="visible"/>

        <com.airbnb.lottie.LottieAnimationView
            style="@style/AppTheme.DefaultLottieLoader"
            android:id="@+id/round_ups_loader"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/foreignСurrencySpinner"
            app:layout_constraintBottom_toTopOf="@id/accept_bt"/>

        <Button
            android:id="@+id/accept_bt"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/accept_bt"
            android:textColor="@color/colorText"
            android:layout_marginBottom="36dp"
            android:background="@drawable/button_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        
    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>